--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
 version = '1.0'
-group = 'com.leonardwohl.sleep_potions' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'sleep_potions'
+group = 'com.leonardwohl.second_brew' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'second_brew'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
@@ -101,7 +101,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
-            args '--mod', 'sleep_potions', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            args '--mod', 'second_brew', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
             mods {
                 examplemod {
